baml_language/crates/baml_tests/snapshots/parser_statements/baml_tests__parser_statements__01_lexer__break_continue.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Break"
Word "statement"
In "in"
While "while"
Word "loop"
Function "function"
Word "simple_break"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
While "while"
LParen "("
Word "true"
RParen ")"
LBrace "{"
Break "break"
Semicolon ";"
RBrace "}"
Semicolon ";"
Return "return"
IntegerLiteral "42"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "Continue"
Word "statement"
In "in"
While "while"
Word "loop"
Function "function"
Word "simple_continue"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
While "while"
LParen "("
Word "true"
RParen ")"
LBrace "{"
Continue "continue"
Semicolon ";"
RBrace "}"
Semicolon ";"
Return "return"
IntegerLiteral "0"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "Break"
In "in"
For "for"
Word "loop"
Function "function"
Word "break_in_for"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
For "for"
LParen "("
Let "let"
Word "i"
Equals "="
IntegerLiteral "0"
Semicolon ";"
Word "i"
Less "<"
IntegerLiteral "10"
Semicolon ";"
Word "i"
Equals "="
Word "i"
Plus "+"
IntegerLiteral "1"
RParen ")"
LBrace "{"
Break "break"
Semicolon ";"
RBrace "}"
Semicolon ";"
Return "return"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "Continue"
In "in"
For "for"
Word "loop"
Function "function"
Word "continue_in_for"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
For "for"
LParen "("
Let "let"
Word "i"
Equals "="
IntegerLiteral "0"
Semicolon ";"
Word "i"
Less "<"
IntegerLiteral "10"
Semicolon ";"
Word "i"
Equals "="
Word "i"
Plus "+"
IntegerLiteral "1"
RParen ")"
LBrace "{"
Continue "continue"
Semicolon ";"
RBrace "}"
Semicolon ";"
Return "return"
IntegerLiteral "2"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "Nested"
Word "loops"
With "with"
Break "break"
Function "function"
Word "nested_break"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
While "while"
LParen "("
Word "true"
RParen ")"
LBrace "{"
While "while"
LParen "("
Word "true"
RParen ")"
LBrace "{"
Break "break"
Semicolon ";"
RBrace "}"
Break "break"
Semicolon ";"
RBrace "}"
Return "return"
IntegerLiteral "3"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "Break"
With "with"
Word "locals"
In "in"
Word "nested"
Word "scope"
Minus "-"
Word "verifies"
Word "scope"
Word "drops"
Word "work"
Function "function"
Word "break_with_locals"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
While "while"
LParen "("
Word "true"
RParen ")"
LBrace "{"
Let "let"
Word "x"
Equals "="
IntegerLiteral "1"
Semicolon ";"
If "if"
LParen "("
Word "true"
RParen ")"
LBrace "{"
Let "let"
Word "y"
Equals "="
IntegerLiteral "2"
Semicolon ";"
Break "break"
Semicolon ";"
Slash "/"
Slash "/"
Word "Should"
Word "pop"
Word "y"
Word "and"
Word "x"
Word "before"
Word "jumping"
Word "out"
RBrace "}"
Semicolon ";"
RBrace "}"
Semicolon ";"
Return "return"
IntegerLiteral "4"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "Continue"
With "with"
Word "locals"
Minus "-"
Word "verifies"
Word "scope"
Word "drops"
For "for"
Continue "continue"
Function "function"
Word "continue_with_locals"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
While "while"
LParen "("
Word "true"
RParen ")"
LBrace "{"
Let "let"
Word "x"
Equals "="
IntegerLiteral "1"
Semicolon ";"
If "if"
LParen "("
Word "true"
RParen ")"
LBrace "{"
Let "let"
Word "y"
Equals "="
IntegerLiteral "2"
Semicolon ";"
Continue "continue"
Semicolon ";"
Slash "/"
Slash "/"
Word "Should"
Word "pop"
Word "y"
Word "and"
Word "x"
Word "before"
Word "jumping"
Word "back"
RBrace "}"
Semicolon ";"
RBrace "}"
Semicolon ";"
Return "return"
IntegerLiteral "5"
Semicolon ";"
RBrace "}"
