baml_language/crates/baml_tests/snapshots/parser_statements/baml_tests__parser_statements__01_lexer__for_loops.snap
---
source: target/debug/build/baml_tests-0fbde5d1c173768c/out/generated_tests.rs
expression: output
---
Function "function"
Word "c_style_for_loop"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "result"
Equals "="
IntegerLiteral "0"
Semicolon ";"
For "for"
LParen "("
Let "let"
Word "i"
Equals "="
IntegerLiteral "0"
Semicolon ";"
Word "i"
Less "<"
IntegerLiteral "10"
Semicolon ";"
Word "i"
PlusEquals "+="
IntegerLiteral "1"
RParen ")"
LBrace "{"
Word "result"
PlusEquals "+="
Word "i"
Semicolon ";"
RBrace "}"
Return "return"
Word "result"
Semicolon ";"
RBrace "}"
Function "function"
Word "iterator_style_for_loop"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "result"
Equals "="
IntegerLiteral "0"
Semicolon ";"
For "for"
LParen "("
Let "let"
Word "i"
In "in"
LBracket "["
IntegerLiteral "1"
Comma ","
IntegerLiteral "2"
Comma ","
IntegerLiteral "3"
RBracket "]"
RParen ")"
LBrace "{"
Word "result"
PlusEquals "+="
Word "i"
Semicolon ";"
RBrace "}"
Return "return"
Word "result"
Semicolon ";"
RBrace "}"
Function "function"
Word "nested_for_loop"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "result"
Equals "="
IntegerLiteral "0"
Semicolon ";"
For "for"
LParen "("
Let "let"
Word "i"
In "in"
LBracket "["
IntegerLiteral "1"
Comma ","
IntegerLiteral "2"
Comma ","
IntegerLiteral "3"
RBracket "]"
RParen ")"
LBrace "{"
For "for"
LParen "("
Let "let"
Word "j"
In "in"
LBracket "["
IntegerLiteral "4"
Comma ","
IntegerLiteral "5"
Comma ","
IntegerLiteral "6"
RBracket "]"
RParen ")"
LBrace "{"
Word "result"
PlusEquals "+="
Word "i"
Star "*"
Word "j"
Semicolon ";"
RBrace "}"
RBrace "}"
Return "return"
Word "result"
Semicolon ";"
RBrace "}"
