baml_language/crates/baml_tests/snapshots/parser_statements/baml_tests__parser_statements__01_lexer__if_statements.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Function "function"
Word "ConditionalLogic"
LParen "("
Word "age"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
If "if"
LParen "("
Word "age"
Less "<"
IntegerLiteral "18"
RParen ")"
LBrace "{"
Return "return"
Quote "\""
Word "minor"
Quote "\""
Semicolon ";"
RBrace "}"
Else "else"
If "if"
LParen "("
Word "age"
Less "<"
IntegerLiteral "65"
RParen ")"
LBrace "{"
Return "return"
Quote "\""
Word "adult"
Quote "\""
Semicolon ";"
RBrace "}"
Else "else"
LBrace "{"
Return "return"
Quote "\""
Word "senior"
Quote "\""
Semicolon ";"
RBrace "}"
RBrace "}"
