baml_language/crates/baml_tests/snapshots/parser_statements/baml_tests__parser_statements__01_lexer__let.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Function "function"
Word "let_statements"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Slash "/"
Slash "/"
Word "Inferred"
Word "type"
Let "let"
Let "let"
Word "x"
Equals "="
IntegerLiteral "1"
Semicolon ";"
Slash "/"
Slash "/"
Word "Typed"
Let "let"
Let "let"
Word "y"
Colon ":"
Word "int"
Equals "="
IntegerLiteral "2"
Semicolon ";"
Slash "/"
Slash "/"
Word "Array"
Word "typed"
Let "let"
Let "let"
Word "z"
Colon ":"
Word "int"
LBracket "["
RBracket "]"
Equals "="
LBracket "["
IntegerLiteral "1"
Comma ","
IntegerLiteral "2"
Comma ","
IntegerLiteral "3"
RBracket "]"
Semicolon ";"
Slash "/"
Slash "/"
Word "Object"
Word "typed"
Let "let"
Let "let"
Word "point"
Colon ":"
Word "Point"
Equals "="
Word "Point"
LBrace "{"
Word "x"
Colon ":"
IntegerLiteral "1"
Comma ","
Word "y"
Colon ":"
IntegerLiteral "2"
Comma ","
RBrace "}"
Semicolon ";"
Return "return"
Word "point"
Dot "."
Word "x"
Plus "+"
Word "point"
Dot "."
Word "y"
Semicolon ";"
RBrace "}"
Class "class"
Word "Point"
LBrace "{"
Word "x"
Word "int"
Word "y"
Word "int"
RBrace "}"
