baml_language/crates/baml_tests/snapshots/parser_statements/baml_tests__parser_statements__01_lexer__while_loop.snap
---
source: target/debug/build/baml_tests-0fbde5d1c173768c/out/generated_tests.rs
expression: output
---
Function "function"
Word "simple_while_loop"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "i"
Equals "="
IntegerLiteral "0"
Semicolon ";"
While "while"
LParen "("
Word "i"
Less "<"
IntegerLiteral "10"
RParen ")"
LBrace "{"
Word "i"
Equals "="
Word "i"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
Return "return"
Word "i"
Semicolon ";"
RBrace "}"
Function "function"
Word "nested_while_loop"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "i"
Equals "="
IntegerLiteral "0"
Semicolon ";"
While "while"
LParen "("
Word "i"
Less "<"
IntegerLiteral "10"
RParen ")"
LBrace "{"
Let "let"
Word "j"
Equals "="
IntegerLiteral "0"
Semicolon ";"
While "while"
LParen "("
Word "j"
Less "<"
IntegerLiteral "10"
RParen ")"
LBrace "{"
Word "j"
Equals "="
Word "j"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
RBrace "}"
Return "return"
Word "i"
Semicolon ";"
RBrace "}"
